--- a/home/index.html
+++ b/home/index.html
@@ -16,11 +16,11 @@
             top: 0;
             width: 100%;
             background-color: #0f0e0b;
-            color: white;
+            color: #ffffff;
             z-index: 1000;
             transition: transform 0.3s ease-in-out;
         }
-        .header .hidden {
+        .header.hidden {
             transform: translateY(-100%);
         }
         .header-text {
@@ -146,18 +146,18 @@
             document.querySelector('.server-online').innerHTML = status.online ? 'up' : 'down';
             document.querySelector('.player-count').innerHTML = status.players.now || 0;
         });
+        let lastScrollY = window.scrollY;
+        const header = document.getElementById('main-header');
 
-        let lastScrollTop = 0;
-    const header = document.querySelector('.header');
-    window.addEventListener('scroll', function () {
-        let scrollTop = window.pageYOffset || document.documentElement.scrollTop;
-        if (scrollTop < 0) {
-            header.classList.remove('hidden');
-        } else {
-            header.classList.add('hidden');
-        }
-        lastScrollTop = scrollTop;
-    });
+        window.addEventListener('scroll', () => {
+            if (window.scrollY > lastScrollY) {
+                // Scrolling down
+                header.classList.remove('hidden');
+            } else if (window.scrollY === 0) {
+                // At the top of the page
+                header.classList.add('hidden');
+            }
+            lastScrollY = window.scrollY;
         });
     </script>
     <div class="content">
