--- a/home/index.html
+++ b/home/index.html
@@ -147,7 +147,7 @@
             document.querySelector('.player-count').innerHTML = status.players.now || 0;
         });
         let lastScrollY = window.scrollY;
-        const header = document.getElementById('main-header');
+        const header = document.getElementById('header');
 
         window.addEventListener('scroll', () => {
             if (window.scrollY > lastScrollY) {
