--- a/home/index.html
+++ b/home/index.html
@@ -15,18 +15,18 @@
             position: fixed;
             top: 0;
             width: 100%;
-            background-color: #0f0e0b;
+            background-color: rgba(15, 14, 11, 0.8); /* Semi-transparent background */
             color: #ffffff;
             z-index: 1000;
             transition: transform 0.3s ease-in-out, visibility 0s 0.3s;
-            visibility: invisible; /* Initially hidden */
+            visibility: hidden; /* Initially hidden */
         }
         .header.visible {
             visibility: visible; /* Make it visible when scrolling down */
             transform: translateY(0); /* Position the header */
         }
         .header.hidden {
-            transform: translateY(-100%);
+            transform: translateY(-100%); /* Hide the header */
             visibility: hidden; /* Ensure it is hidden when above */
         }
         .header-text {
@@ -53,6 +53,14 @@
             padding: 20px;
             text-align: center;
         }
+        .content input {
+            width: 300px;
+            padding: 10px;
+            margin-right: 10px;
+        }
+        .content button {
+            padding: 10px;
+        }
         footer {
             background-color: #e6a823;
             padding: 20px;
@@ -74,6 +82,11 @@
         }
         .footer-section h4 {
             margin-bottom: 10px;
+        }
+        .server-status {
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
         .banner {
             background-image: url('banner.png');
@@ -114,16 +127,19 @@
             </div>
         </nav>
     </header>
+
     <div class="banner">
         <div class="header-text"><h1>Four Network ID</h1></div>
         <p class="header-p">Luckyblock theme Minecraft server</p>
     </div>
+
     <div class="content">
         <div class="server-status">
             FOUR is Currently <span class="server-online"></span>!<br>
             Players online: <span class="player-count"></span> dari 2025
         </div>
     </div>
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.4.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -137,38 +153,28 @@
             document.querySelector('.server-online').innerHTML = status.online ? 'up' : 'down';
             document.querySelector('.player-count').innerHTML = status.players.now || 0;
         });
-        
+
         let lastScrollY = window.scrollY;
         const header = document.querySelector('.header');
 
         window.addEventListener('scroll', () => {
             if (window.scrollY > lastScrollY) {
                 // Scrolling down
+                header.classList.remove('visible');
+                header.classList.add('hidden');
+            } else if (window.scrollY < lastScrollY) {
+                // Scrolling up
                 header.classList.remove('hidden');
                 header.classList.add('visible');
-            } else if (window.scrollY <= 0) {
-                // Scrolling up
-                header.classList.remove('visiblen');
-                header.classList.add('hidden');
-            }   
+            }
             lastScrollY = window.scrollY;
         });
     </script>
+
     <div class="content">
         <a href="https://dc.gg/fournetwork"><button class="btn btn-primary">Discord</button></a>
     </div>
-    <div class="content">
-    </div>
-    <div class="content">
-    </div>
-    <div class="content">
-    </div>
-    <div class="content">
-    </div>
-    <div class="content">
-    </div>
-    <div class="content">
-    </div>
+
     <footer>
         <div class="footer-content">
             <div class="footer-section">
