--- a/home/index.html
+++ b/home/index.html
@@ -19,7 +19,6 @@
             color: #ffffff;
             z-index: 1000;
             transition: transform 0.3s ease-in-out, visibility 0s 0.3s;
-            visibility: hidden; /* Initially hidden */
         }
         .header.visible {
             visibility: visible; /* Make it visible when scrolling down */
@@ -162,7 +161,7 @@
                 // Scrolling down
                 header.classList.remove('visible');
                 header.classList.add('hidden');
-            } else if (window.scrollY < lastScrollY) {
+            } else if (window.scrollY <= 0) {
                 // Scrolling up
                 header.classList.remove('hidden');
                 header.classList.add('visible');
