--- a/home/index.html
+++ b/home/index.html
@@ -107,19 +107,16 @@
             </div>
         </nav>
     </header>
-
     <div class="banner">
         <div class="header-text"><h1>Four Network ID</h1></div>
         <p class="header-p">Luckyblock theme Minecraft server</p>
     </div>
-
     <div class="content">
         <div class="server-status">
             FOUR is Currently <span class="server-online"></span>!<br>
             Players online: <span class="player-count"></span> dari 2025
         </div>
     </div>
-
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.4.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -148,11 +145,21 @@
             lastScrollY = window.scrollY;
         });
     </script>
-
     <div class="content">
         <a href="https://dc.gg/fournetwork"><button class="btn btn-primary">Discord</button></a>
     </div>
-
+    <div class="content">
+    </div>
+    <div class="content">
+    </div>
+    <div class="content">
+    </div>
+    <div class="content">
+    </div>
+    <div class="content">
+    </div>
+    <div class="content">
+    </div>
     <footer>
         <div class="footer-content">
             <div class="footer-section">
