--- a/home/index.html
+++ b/home/index.html
@@ -44,6 +44,12 @@
             padding: 20px;
             text-align: center;
         }
+        .content-1 {
+            background-color: #ff9800;
+            padding: 20px;
+            text-align: center;
+            height: 100px;
+        }
         footer {
             background-color: #e6a823;
             padding: 20px;
@@ -148,17 +154,17 @@
     <div class="content">
         <a href="https://dc.gg/fournetwork"><button class="btn btn-primary">Discord</button></a>
     </div>
-    <div class="content">
+    <div class="content-1">
     </div>
-    <div class="content">
+    <div class="content-1">
     </div>
-    <div class="content">
+    <div class="content-1">
     </div>
-    <div class="content">
+    <div class="content-1">
     </div>
-    <div class="content">
+    <div class="content-1">
     </div>
-    <div class="content">
+    <div class="content-1">
     </div>
     <footer>
         <div class="footer-content">
