--- a/home/index.html
+++ b/home/index.html
@@ -101,13 +101,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="https://four.my.id/home">Home</a>
+                        <a class="nav-link" href="https://four.my.id/home"><h1>Home</h1></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://four.my.id/store">Store</a>
+                        <a class="nav-link" href="https://four.my.id/store"><h1>Store</h1></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://four.my.id/perks">Perks</a>
+                        <a class="nav-link" href="https://four.my.id/perks"><h1>Perks</h1></a>
                     </li>
                 </ul>
             </div>
