--- a/home/index.html
+++ b/home/index.html
@@ -20,6 +20,9 @@
             z-index: 1000;
             transition: background-color 0.3s ease-in-out;
         }
+        .link {
+            color: #ffffff;
+        }
         .header-text {
             position: absolute;
             top: 50%;
@@ -101,13 +104,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="https://four.my.id/home"><h3>Home</h3></a>
+                        <a class="link" href="https://four.my.id/home"><b>Home</b></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://four.my.id/store"><h3>Store</h3></a>
+                        <a class="link" href="https://four.my.id/store"><b>Store</b></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://four.my.id/perks"><h3>Perks</h3></a>
+                        <a class="link" href="https://four.my.id/perks"><b>Perks</b></a>
                     </li>
                 </ul>
             </div>
