--- a/home/index.html
+++ b/home/index.html
@@ -20,7 +20,7 @@
             z-index: 1000;
             transition: background-color 0.3s ease-in-out;
         }
-        .link {
+        .nav-link {
             color: #ffffff;
         }
         .header-text {
@@ -104,13 +104,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="link" href="https://four.my.id/home"><b>Home</b></a>
+                        <a class="nav-link" href="https://four.my.id/home"><b>Home</b></a>
                     </li>
                     <li class="nav-item">
-                        <a class="link" href="https://four.my.id/store"><b>Store</b></a>
+                        <a class="nav-link" href="https://four.my.id/store"><b>Store</b></a>
                     </li>
                     <li class="nav-item">
-                        <a class="link" href="https://four.my.id/perks"><b>Perks</b></a>
+                        <a class="nav-link" href="https://four.my.id/perks"><b>Perks</b></a>
                     </li>
                 </ul>
             </div>
