--- a/home/index.html
+++ b/home/index.html
@@ -15,7 +15,7 @@
             position: fixed;
             top: 0;
             width: 100%;
-            background-color: #0f0e0b; /* Initial background color */
+            background-color: rgba(0, 0, 0, 0);
             color: #ffffff;
             z-index: 1000;
             transition: background-color 0.3s ease-in-out;
