--- a/home/index.html
+++ b/home/index.html
@@ -112,6 +112,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="https://four.my.id/perks"><b>Perks</b></a>
                     </li>
+                    <li class="nav-link">
+                        <a href="https://four.my.id/discord"><b>Discord</b></a>
+                    </li>
                 </ul>
             </div>
         </nav>
