--- a/store/index.html
+++ b/store/index.html
@@ -219,7 +219,7 @@
                 header.style.backgroundColor = '#0f0e0b';
             } else if (window.scrollY <= 0) {
                 // At the top of the page
-                header.style.backgroundColor = 'rgba(0, 0, 0, 0)';
+                header.style.backgroundColor <= 'rgba(0, 0, 0, 0)';
             }
             lastScrollY = window.scrollY;
         });
