--- a/store/index.html
+++ b/store/index.html
@@ -105,10 +105,6 @@
             font-size: 2em;
             color: #ffffff;
         }
-        .header {
-            color: #ffffff;
-            background-color: #000f0e;
-        }
         h2 {
             font-size: 120%;
         }
@@ -219,7 +215,7 @@
                 header.style.backgroundColor = '#0f0e0b';
             } else if (window.scrollY <= 0) {
                 // At the top of the page
-                header.style.backgroundColor <= 'rgba(0, 0, 0, 0)';
+                header.style.backgroundColor = 'rgba(0, 0, 0, 0)';
             }
             lastScrollY = window.scrollY;
         });
