--- a/store/index.html
+++ b/store/index.html
@@ -163,7 +163,7 @@
             <img src="2.png" alt="Rare Rank">
             <h2>Rare Rank</h2>
             <p class="p">Rp 15k / $0.99</p>
-            <div calss="align">
+            <div class="align">
 
             </div>
             <h4>ORDER</h4>
@@ -188,7 +188,7 @@
             <img src="5.png" alt="Super Super Rare+ Rank">
             <h2>Super Super Rare+ Rank</h2>
             <p class="p">Rp 150k / $9.22</p>
-            <div calss="align">
+            <div class="align">
           
             </div>
             <h4>ORDER</h4>
