--- a/store/index.html
+++ b/store/index.html
@@ -180,7 +180,7 @@
             <img src="4.png" alt="Super Super Rare Rank">
             <h2>Super Super Rare Rank</h2>
             <p class="p">Rp 75k / $4.65</p>
-            <div calss="align">
+            <div class="align">
             </div>
             <h4>ORDER</h4>
         </div>
@@ -189,7 +189,6 @@
             <h2>Super Super Rare+ Rank</h2>
             <p class="p">Rp 150k / $9.22</p>
             <div class="align">
-          
             </div>
             <h4>ORDER</h4>
         </div>
