--- a/store/index.html
+++ b/store/index.html
@@ -155,7 +155,7 @@
             <img src="1.png" alt="Common Rank">
             <h2>Common Rank</h2>
             <p class="p">Free</p>
-            <div calss="align">
+            <div class="align">
             </div>
             <h4>ORDER</h4>
         </div>
@@ -164,7 +164,8 @@
             <h2>Rare Rank</h2>
             <p class="p">Rp 15k / $0.99</p>
             <div class="align">
-
+            </div>
+            <div class="align">
             </div>
             <h4>ORDER</h4>
         </div>
@@ -172,7 +173,7 @@
             <img src="3.png" alt="Super Rare Rank">
             <h2>Super Rare Rank</h2>
             <p class="p">Rp 50k / $3.10</p>
-            <div calss="align">
+            <div class="align">
             </div>
             <h4>ORDER</h4>
         </div>
