--- a/store/index.html
+++ b/store/index.html
@@ -155,42 +155,35 @@
             <img src="1.png" alt="Common Rank">
             <h2>Common Rank</h2>
             <p class="p">Free</p>
-            <div class="align">
-            </div>
+            <div class="align"></div>
             <h4>ORDER</h4>
         </div>
         <div class="card">
             <img src="2.png" alt="Rare Rank">
             <h2>Rare Rank</h2>
             <p class="p">Rp 15k / $0.99</p>
-            <div class="align">
-            </div>
-            <div class="align">
-            </div>
+            <div class="align"></div>
             <h4>ORDER</h4>
         </div>
         <div class="card">
             <img src="3.png" alt="Super Rare Rank">
             <h2>Super Rare Rank</h2>
             <p class="p">Rp 50k / $3.10</p>
-            <div class="align">
-            </div>
+            <div class="align"></div>
             <h4>ORDER</h4>
         </div>
         <div class="card">
             <img src="4.png" alt="Super Super Rare Rank">
             <h2>Super Super Rare Rank</h2>
             <p class="p">Rp 75k / $4.65</p>
-            <div class="align">
-            </div>
+            <div class="align"></div>
             <h4>ORDER</h4>
         </div>
         <div class="card">
             <img src="5.png" alt="Super Super Rare+ Rank">
             <h2>Super Super Rare+ Rank</h2>
             <p class="p">Rp 150k / $9.22</p>
-            <div class="align">
-            </div>
+            <div class="align"></div>
             <h4>ORDER</h4>
         </div>
         <div class="card">
@@ -201,11 +194,11 @@
         </div>
     </div>
     <div class="coming-soon"><strong>[COMING SOON]</strong></div>
-    <div class="content">
-    </div>
+    <div class="content"></div>
+    
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.4.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script>
         let lastScrollY = window.scrollY;
         const header = document.querySelector('.header');
