--- a/store/index.html
+++ b/store/index.html
@@ -163,6 +163,7 @@
             <h2>Rare Rank</h2>
             <p class="p">Rp 15k / $0.99</p>
             <div class="align"></div>
+            <div class="align"></div>
             <h4>ORDER</h4>
         </div>
         <div class="card">
