--- a/perks/index.html
+++ b/perks/index.html
@@ -54,6 +54,18 @@
             padding: 20px;
             text-align: center;
         }
+        .banner {
+            background-image: url('banner.png');
+            background-color: #ff9800;
+            background-size: cover;
+            height: 370px;
+            color: white;
+            display: flex;
+            align-items: center;
+            text-align: center;
+            position: relative;
+            width: auto;
+        }
     </style>
 </head>
 <body>
