--- a/perks/index.html
+++ b/perks/index.html
@@ -23,6 +23,14 @@
         b {
             color: #ffffff;
         }
+        .header-text {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-size: 2em;
+            color: #ffffff;
+        }
       footer {
             background-color: #e6a823;
             padding: 20px;
