--- a/perks/index.html
+++ b/perks/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
       body {
-        color: #ff9800;
+        background-color: #ff9800;
         margin: 0;
       }
       .header {
