--- a/perks/index.html
+++ b/perks/index.html
@@ -105,6 +105,14 @@
         <div class="header-text"><h1> PERKS </h1></div>
     </div>
     <hr>
+    <div class="content-1">
+    </div>
+    <div class="content-1">
+    </div>
+    <div class="content-1">
+    </div>
+    <div class="content-1">
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.4.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
