--- a/perks/index.html
+++ b/perks/index.html
@@ -62,6 +62,12 @@
             padding: 20px;
             text-align: center;
         }
+        .content-1 {
+            background-color: #ff9800;
+            padding: 20px;
+            text-align: center;
+            height: 100px;
+        }
         .banner {
             background-image: url('banner.png');
             background-color: #ff9800;
