--- a/test/index.html
+++ b/test/index.html
@@ -2,96 +2,37 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Four Network ID</title>
+    <meta name="viewport" content="width=device-width, initial-scale=0.83">
+    <title>Button Hover Effect</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f2f2f2;
+            background-color: #ff9800;
+            margin: 0;
             text-align: center;
+            padding: 50px;
         }
-        h1 {
-            color: #333;
-        }
-        form {
-            margin-top: 20px;
-        }
-        input[type="text"] {
-            padding: 10px;
-            margin: 10px;
-        }
-        input[type="submit"] {
-            padding: 10px 20px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            cursor: pointer;
-        }
-        footer {
-            margin-top: 20px;
-            font-size: 0.9em;
-        }
-        #result {
-            margin-top: 20px;
-            font-weight: bold;
-        }
-        #savedIDs {
-            margin-top: 20px;
-            text-align: left;
+        .hover-button {
             display: inline-block;
+            padding: 10px 20px;
+            background-color: #007bff; /* Bootstrap primary color */
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: transform 0.3s ease; /* Smooth transition */
+        }
+
+        .hover-button:hover {
+            transform: translateY(-5px); /* Move up by 5 pixels on hover */
         }
     </style>
 </head>
 <body>
-    <h1>Four Network ID</h1>
+    <h1>Hover Over the Button</h1>
+    <a href="#" class="hover-button">Go Up</a>
 
-    <form id="networkForm">
-        <label for="networkID">Enter Network ID:</label>
-        <input type="text" id="networkID" name="networkID" required>
-        <input type="submit" value="Submit">
-    </form>
-
-    <div id="result"></div>
-    <div id="savedIDs"></div> <!-- Container for saved Network IDs -->
-
-    <footer>
-        <p>© TheFour - a Minecraft server</p>
-        <p>Contact Email: <a href="mailto:araffaamf@gmail.com">araffaamf@gmail.com</a></p>
-        <p>Discord: @antophd</p>
-        <p>Follow us on TikTok: 
-            <a href="https://www.tiktok.com/@arAffaMaulanaFai">arAffaMaulanaFai</a>, 
-            <a href="https://www.tiktok.com/@thefour_official">thefour_official</a>
-        </p>
-    </footer>
-
-    <script>
-        document.getElementById('networkForm').addEventListener('submit', function(event) {
-            event.preventDefault(); // Prevent the form from submitting the traditional way
-
-            // Get the value from the input field
-            const networkID = document.getElementById('networkID').value;
-
-            // Send the Network ID to the server using Fetch API
-            fetch('/save', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({ networkID: networkID })
-            })
-            .then(response => response.text())
-            .then(data => {
-                // Display the result
-                document.getElementById('result').innerText = data;
-
-                // Optionally, you can clear the input field after submission
-                document.getElementById('networkID').value = '';
-            })
-            .catch(error => {
-                console.error('Error:', error);
-                document.getElementById('result').innerText = 'Error saving Network ID';
-            });
-        });
-    </script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.4.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
