--- a/store/index.html
+++ b/store/index.html
@@ -118,6 +118,10 @@
             font-size: 400%;
             height: 23px;
         }
+        .button {
+            width: auto;
+            height: 20px;
+        }
     </style>
 </head>
 <body>
@@ -155,8 +159,6 @@
             <img src="1.png" alt="Common Rank">
             <h2>Common Rank</h2>
             <p class="p">Free</p>
-            <div class="align"></div>
-            <h4>ORDER</h4>
         </div>
         <div class="card">
             <img src="2.png" alt="Rare Rank">
@@ -164,7 +166,9 @@
             <p class="p">Rp 15k / $0.99</p>
             <div class="align"></div>
             <div class="align"></div>
-            <h4>ORDER</h4>
+            <button class="btn btn-orange"> 
+                <a href="#"><h4>ORDER</h4></a>
+            </button>
         </div>
         <div class="card">
             <img src="3.png" alt="Super Rare Rank">
