--- a/store/index.html
+++ b/store/index.html
@@ -121,6 +121,7 @@
         .button {
             width: auto;
             height: 20px;
+            background-color: #ff9800;
         }
     </style>
 </head>
@@ -166,7 +167,7 @@
             <p class="p">Rp 15k / $0.99</p>
             <div class="align"></div>
             <div class="align"></div>
-            <button class="btn btn-orange"> 
+            <button class="btn btn-orange button"> 
                 <a href="#"><h4>ORDER</h4></a>
             </button>
         </div>
