--- a/store/index.html
+++ b/store/index.html
@@ -120,7 +120,7 @@
         }
         .button {
             width: auto;
-            height: 20px;
+            height: 25px;
             background-color: #ff9800;
         }
     </style>
@@ -168,7 +168,7 @@
             <div class="align"></div>
             <div class="align"></div>
             <button class="btn btn-orange button"> 
-                <a href="#"><h4>ORDER</h4></a>
+                <a href="#">ORDER</a>
             </button>
         </div>
         <div class="card">
