--- a/store/index.html
+++ b/store/index.html
@@ -120,9 +120,11 @@
         }
         .button {
             width: auto;
-            height: 25px;
+            height: 40px;
             background-color: #ff9800;
         }
+        h4 {
+            font-size: 150%
     </style>
 </head>
 <body>
@@ -168,7 +170,7 @@
             <div class="align"></div>
             <div class="align"></div>
             <button class="btn btn-orange button"> 
-                <a href="#">ORDER</a>
+                <a href="#"><h4>ORDER</h4></a>
             </button>
         </div>
         <div class="card">
