--- a/store/index.html
+++ b/store/index.html
@@ -169,9 +169,7 @@
             <p class="p">Rp 15k / $0.99</p>
             <div class="align"></div>
             <div class="align"></div>
-            <button class="btn btn-orange button"> 
-                <a href="#"><h4>ORDER</h4></a>
-            </button>
+            <a href="#" class="button btn"><h4>ORDER</h4></a>
         </div>
         <div class="card">
             <img src="3.png" alt="Super Rare Rank">
