--- a/store/index.html
+++ b/store/index.html
@@ -124,7 +124,9 @@
             background-color: #ff9800;
         }
         h4 {
-            font-size: 140%
+            font-size: 140%;
+            color: #ffffff;
+        }
     </style>
 </head>
 <body>
