--- a/store/index.html
+++ b/store/index.html
@@ -121,10 +121,16 @@
         .button {
             width: auto;
             height: 40px;
-            background-color: #ff9800;
+            background-color: #ffffff;
+            color: #000000;
+            border-color: #ff9800;
         }
         h4 {
             font-size: 140%;
+            color: #ffffff;
+        }
+        .button:hover {
+            bachground-color: #ff9800;
             color: #ffffff;
         }
     </style>
