--- a/store/index.html
+++ b/store/index.html
@@ -129,7 +129,7 @@
             font-size: 140%;
         }
         .button:hover {
-            bachground-color: #ff9800;
+            background-color: #ff9800;
             color: #ffffff;
         }
     </style>
