--- a/store/index.html
+++ b/store/index.html
@@ -183,27 +183,27 @@
             <h2>Super Rare Rank</h2>
             <p class="p">Rp 50k / $3.10</p>
             <div class="align"></div>
-            <h4>ORDER</h4>
+            <a href="#" class="button btn"><h4>ORDER</h4></a>
         </div>
         <div class="card">
             <img src="4.png" alt="Super Super Rare Rank">
             <h2>Super Super Rare Rank</h2>
             <p class="p">Rp 75k / $4.65</p>
             <div class="align"></div>
-            <h4>ORDER</h4>
+            <a href="#" class="button btn"><h4>ORDER</h4></a>
         </div>
         <div class="card">
             <img src="5.png" alt="Super Super Rare+ Rank">
             <h2>Super Super Rare+ Rank</h2>
             <p class="p">Rp 150k / $9.22</p>
             <div class="align"></div>
-            <h4>ORDER</h4>
+            <a href="#" class="button btn"><h4>ORDER</h4></a>
         </div>
         <div class="card">
             <img src="6.png" alt="Super Super Rare++ Rank">
             <h2>Super Super Rare++ Rank</h2>
             <p class="p">Rp 215k / $13.22</p>
-            <h4>ORDER</h4>
+            <a href="#" class="button btn"><h4>ORDER</h4></a>
         </div>
     </div>
     <div class="coming-soon"><strong>[COMING SOON]</strong></div>
