--- a/store/index.html
+++ b/store/index.html
@@ -76,6 +76,12 @@
             padding: 20px;
             text-align: center;
         }
+        .content-1 {
+            background-color: #ff9800;
+            padding: 20px;
+            text-align: center;
+            height: 100px;
+        }
         .card-align {
             font-family: Arial, sans-serif;
             display: flex;
@@ -227,6 +233,8 @@
             lastScrollY = window.scrollY;
         });
     </script>
+    <div class="content-1">
+    </div>
     <footer>
         <div class="footer-content">
             <div class="footer-section">    
