--- a/store/index.html
+++ b/store/index.html
@@ -213,7 +213,7 @@
         </div>
     </div>
     <div class="coming-soon"><strong>[COMING SOON]</strong></div>
-    <div class="content"></div>
+    <div class="content-1"></div>
     
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.4.4/dist/umd/popper.min.js"></script>
@@ -233,8 +233,6 @@
             lastScrollY = window.scrollY;
         });
     </script>
-    <div class="content-1">
-    </div>
     <footer>
         <div class="footer-content">
             <div class="footer-section">    
