--- a/payment/index.html
+++ b/payment/index.html
@@ -69,6 +69,7 @@
             height: 100px;
         }
         .banner {
+            background-image: url('banner.png');
             background-color: #ff9800;
             background-size: cover;
             height: 370px;
