--- a/store/index.html
+++ b/store/index.html
@@ -182,39 +182,37 @@
             <p class="p">Rp 15k / $0.99</p>
             <div class="align"></div>
             <div class="align"></div>
-            <a href="#" class="button btn"><h4>ORDER</h4></a>
+            <a href="https://four.my.id/payment" class="button btn"><h4>ORDER</h4></a>
         </div>
         <div class="card">
             <img src="3.png" alt="Super Rare Rank">
             <h2>Super Rare Rank</h2>
             <p class="p">Rp 50k / $3.10</p>
             <div class="align"></div>
-            <a href="#" class="button btn"><h4>ORDER</h4></a>
+            <a href="https://four.my.id/payment" class="button btn"><h4>ORDER</h4></a>
         </div>
         <div class="card">
             <img src="4.png" alt="Super Super Rare Rank">
             <h2>Super Super Rare Rank</h2>
             <p class="p">Rp 75k / $4.65</p>
             <div class="align"></div>
-            <a href="#" class="button btn"><h4>ORDER</h4></a>
+            <a href="https://four.my.id/payment" class="button btn"><h4>ORDER</h4></a>
         </div>
         <div class="card">
             <img src="5.png" alt="Super Super Rare+ Rank">
             <h2>Super Super Rare+ Rank</h2>
             <p class="p">Rp 150k / $9.22</p>
             <div class="align"></div>
-            <a href="#" class="button btn"><h4>ORDER</h4></a>
+            <a href="https://four.my.id/payment" class="button btn"><h4>ORDER</h4></a>
         </div>
         <div class="card">
             <img src="6.png" alt="Super Super Rare++ Rank">
             <h2>Super Super Rare++ Rank</h2>
             <p class="p">Rp 215k / $13.22</p>
-            <a href="#" class="button btn"><h4>ORDER</h4></a>
+            <a href="https://four.my.id/payment" class="button btn"><h4>ORDER</h4></a>
         </div>
     </div>
-    <div class="coming-soon"><strong>[COMING SOON]</strong></div>
     <div class="content-1"></div>
-    
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.4.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
