--- a/home/index.html
+++ b/home/index.html
@@ -125,8 +125,8 @@
     </div>
     <div class="content">
         <div class="server-status">
-            FOUR is Currently <span class="server-online"></span>!<br>
-            Players online: <span class="player-count"></span> dari 2025
+            Four Network ID status: <span class="server-online"></span>!<br>
+            Players online: <span class="player-count"></span>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
@@ -135,7 +135,7 @@
     <script src="https://mcapi.us/scripts/minecraft.min.js"></script>
     <script>
         // Update server status
-        MinecraftAPI.getServerStatus('play.four.my.id', { port: 19135 }, function (err, status) {
+        MinecraftAPI.getServerStatus('mc.four.my.id', { port: 19135 }, function (err, status) {
             if (err) {
                 return document.querySelector('.server-status').innerHTML = 'Error loading status';
             }
