--- a/home/index.html
+++ b/home/index.html
@@ -137,9 +137,9 @@
         // Update server status
         MinecraftAPI.getServerStatus('mc.four.my.id', { port: 19135 }, function (err, status) {
             if (err) {
-                return document.querySelector('.server-status').innerHTML = 'Error loading status';
+                return document.querySelector('.server-status').innerHTML = 'Offline';
             }
-            document.querySelector('.server-online').innerHTML = status.online ? 'Online!' : 'Offline!';
+            document.querySelector('.server-online').innerHTML = status.online ? 'Online' : 'Offline';
             document.querySelector('.player-count').innerHTML = status.players.now || 0;
         });
 
